styles/globals.css
/* ... */
:is(.wishlist-artwrks, .cart-artwrks) > p {
    text-align: center;
    margin: auto;
}
.list-item {
    display: flex;
    justify-content: space-between;
    padding: 0.8em 1em 0.8em;
}
.list-dets {
    display: flex;
    gap: 1.5rem;
}
.list-optn {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    justify-content: center;
}
.list-rmv button {
    background: var(--primaryColor);
    width: 100%;
    padding: 0.5em 0.7em;
    border: 1px solid var(--primaryColor);
    color: #fff;
    border-radius: 5px;
}
.list-buy button {
    background: transparent;
    width: 100%;
    padding: 0.5em 0.7em;
    border: 1px solid var(--primaryColor);
    color: var(--primaryColor);
    border-radius: 5px;
}
.profile_container,
.wishlist_container {
    display: grid;
    grid-template-columns: 200px 1fr;
    grid-auto-rows: auto;
    gap: 1.5rem;
    height: 80vh;
}
.menu_container {
    display: flex;
    flex-direction: column;
    padding: 0.8em 1em;
    border-radius: 5px;
    border: 1px solid var(--primaryColor);
    height: max-content;
}
.menu_container div:not(:last-child) {
    padding: 0.4em;
    border-bottom: 1px solid var(--secondaryColor);
}
.menu_container div:last-child {
    padding: 0.4em 0 0.4em;
}
.profile-details {
    gap: 0.9rem;
    justify-content: center;
}
.personal img {
    border-radius: 50%;
}
.profile-details :is(.personal) {
    display: flex;
    flex-direction: column;
    gap: 0.9rem;
}
.personal {
    align-items: center;
    align-self: center;
}

@media screen and (max-width: 540px) {
    .layout_container:has(
            .market_wrapper,
            .artwrk_container,
            .cart_wrapper,
            .wishlist_container,
            .profile_container,
            .login_container,
            .register_container,
            .checkout_container
        ) {
        padding: 0 2rem;
    }
    .navbar {
        padding: 1.5rem;
        gap: 2rem;
    }
    .menu_container {
        display: none;
    }
    .mobile_ham {
        display: block;
    }
    .mobile_menu {
        display: flex;
    }
    .nav-sign svg,
    .nav-cart svg,
    .nav-gallery svg {
        width: 20px;
        height: 20px;
    }
    .item-qty {
        width: 13px;
        font-size: 12px;
        height: 13px;
    }
    .art_container h2 {
        font-size: 3rem;
    }
    .art-element:nth-of-type(1) {
        top: 40%;
    }
    .art-element:nth-of-type(2) {
        top: calc(40% + 2rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .art-element:nth-of-type(3) {
        top: calc(40% + 4rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .art-element:nth-of-type(4) {
        top: calc(40% + 6rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .art-element:nth-of-type(5) {
        top: calc(40% + 8rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .art-element:nth-of-type(6) {
        top: calc(40% + 10rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .art-element:nth-of-type(7) {
        top: calc(40% + 12rem);
        left: 50%;
        transform: translate(-50%, -50%) rotate(0);
    }
    .info_container {
        padding: 2em; /**/
        flex-direction: column;
        gap: 1.5rem;
        align-items: center; /*?*/
    }
    .slider {
        justify-content: start;
        gap: 0.5rem;
        width: 100%; /*?*/
    }
    .slider-art {
        height: 100%;
    }
    .slider .art-slide {
        font-size: 0.8rem;
    }
    .info-more {
        text-align: justify;
        font-size: 1rem;
    }
    .pin-text,
    .boxes {
        font-size: 1.5rem;
    }
    .layer-items {
        flex-direction: column;
        font-size: 1.5rem;
    }
    .bg-login,
    .bg-register {
        display: none;
    }
    .form-side {
        padding: 0.8em 2em;
    }
    .artwrk-top {
        flex-direction: column;
    }
    .artwrk-image img {
        max-width: 100%;
        height: auto;
    }
    .cart_container,
    .checkout_container {
        grid-template-columns: 1fr;
    }
    .checkout_container .cart-artwrks,
    .checkout-info {
        padding: 0.8em;
    }
    .checkout-personal,
    .checkout-shipping {
        padding: 0.8em;
    }
    .cart-products {
        flex-direction: column;
        gap: 0.5rem;
    }
    .artwrk-total {
        align-self: flex-end;
    }
    .cart-optn > button {
        padding: 0;
    }
    .cart-rmv svg {
        width: 20px;
        height: 20px;
    }
    .cart-ctrl {
        gap: 0.5rem;
        padding: 0.5em;
    }
    .subtotal-head,
    .checkout-dets {
        display: none;
    }
    .profile_container,
    .wishlist_container {
        grid-template-columns: 1fr;
    }
    .checkout_container .checkout-dets {
        display: flex;
    }
    .cart-subtotal {
        gap: 0.1rem;
    }
    .cart-subtotal div:not(:last-child) {
        padding: 0.2em;
    }
    .wishlist-artwrks,
    .profile-details {
        padding: 1em;
    }
    .list-item {
        flex-direction: column;
        gap: 0.5rem;
    }
    .list-optn {
        gap: 0.5rem;
    }
    .success-btn button {
        padding: 0.5em;
    }
}
/* ... */

